Done with the second touch

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <p class="result-score"><span>76</span> of 100</p>
                     <div>
                         <p class="result-rank">Great</p>
-                        <p>
+                        <p class="result-info">
                             You scored higher than 65% of the people who have
                             taken these tests.
                         </p>
@@ -33,7 +33,7 @@
                 </div>
                 <div class="summary">
                     <h2 class="summary-title">Summary</h2>
-                    <div class="grid-flow">
+                    <div class="summary-rows">
                         <div class="summary-item">
                             <div class="flex-group">
                                 <svg
@@ -139,13 +139,13 @@
                                         d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"
                                     />
                                 </svg>
-                                <h3 class="summary-item-title">Visual</h3>
+                                <b>Visual</b>
                             </div>
                             <p class="summary-score"><span>72</span> / 100</p>
                         </div>
                     </div>
+                    <button class="btn">Continue</button>
                 </div>
-                <button class="btn">Continue</button>
             </div>
         </main>
 
