--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                                         d="M17.5 10c-1.574 2.492-4.402 5-7.5 5s-5.926-2.508-7.5-5C4.416 7.632 6.66 5 10 5s5.584 2.632 7.5 5Z"
                                     />
                                 </svg>
-                                <b>Visual</b>
+                                <h3 class="summary-item-title">Visual</h3>
                             </div>
                             <p class="summary-score"><span>72</span> / 100</p>
                         </div>
